[project]
name = "schier-mount"
version = "0.1.0"
description = ""
authors = [
    {name = "Enzo Peres Afonso",email = "enzo.p.afonso@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "schier_mount", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
